--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
 name = "hatch-cada"
-description = "Hatchling metadata hook that rewrites workspace dependencies with version constraints at build time"
+description = "Hatchling metadata hook that rewrites uv workspace dependencies with version constraints at build time"
 readme = "README.md"
 authors = [{ name = "Bilel Omrani", email = "bilelomrani1@gmail.com" }]
 maintainers = [{ name = "Bilel Omrani", email = "bilelomrani1@gmail.com" }]
 requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
+    "Framework :: Hatch",
     "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
