ci: Override Codecov commit and branch for proper baseline tracking

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -56,3 +56,5 @@ jobs:
         with:
           files: coverage.xml
           flags: python${{ matrix.python-version }}
+          override_commit: ${{ github.sha }}
+          override_branch: main
